[package]
name = "mech-system"
version = "0.1.0"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "System library for the Mech language"
documentation = "http://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-machines/system"
keywords = ["mech", "language", "programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[badges]
gitlab = { repository = "mech-lang/machines/system", branch = "main" }
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
mech-core = {version = "0.1", default-features = false}
mech-utilities = "0.1"
crossbeam-channel = "0.5.6"
lazy_static = "1.4.0"